# TrackMind-MoE

./: .env.example  .gitignore  README.md  SOURCE_CODE_AUDIT.md  TRACKMIND_SYSTEM_AUDIT_ARTIFACTS.csv  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
ai/: README.md
ai/evaluations/: surface-advisor-v2-readiness.md
ai/model-cards/: surface-advisor-v2.md
ai/prompt-cards/: surface-intervention-v4.md
apps/agents/router/phase_router/: Cargo.toml  README.md  __init__.py  pyproject.toml
apps/agents/router/phase_router/src/: lib.rs
apps/agents/router/phase_router/tests/: test_phase_router.py
apps/api/: package.json
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/: README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
artifacts/: backend-performance-smoke.csv
compliance/controls/: control-catalog.md
config/auth/: entra-role-mapping.json
config/customer-management/: onboarding-workflows.json  support-tiers.json
config/platform-expansion/: integration-connectors.json  (+5 more)
db/: neo4j_schema.cypher
docs/: README.md  TRACKMIND_BUILD_INTENT.md  TRACKMIND_IMPLEMENTATION_PLAN.md  architecture.md  frontend-migration-inventory.md  frontend-stabilization-report.md  racetrack-asset-control-registry.md  trackmind-nexus-repository-understanding.md  trackmind-nexus-v1-enterprise-architecture.md
scripts/: link-shared.mjs  performance-smoke.mjs  run-node-tests.mjs  start-dev.mjs  sync-vercel-output.mjs  validate-migrations.mjs
tests/: README.md
workflows/: README.md
(+797 files in other folders)
